--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
+/* To change the background to black to have a white border */
+body{
+     background-color:  black;
+}
+#imagebox{
+
+    
+}
+
 #interface{
 
 }
 #dialogueBox{
+
 
 }
 
