--- a/style.css
+++ b/style.css
@@ -64,9 +64,9 @@
      color: black;
      background-color: yellow;
      border: 2px solid white;
-/* }
+}
 
-#act{
+/* #act{
      font-size: 40px;
 }
 
