(Lukas) Added a new font style into css

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap");
+/* "Jacquard 12" */
 
 /* To change the background to black and to have a white border */
 :root{
