--- a/style.css
+++ b/style.css
@@ -18,20 +18,12 @@
      font-size: 120px;
 }
 
-#imgResize{
+/* #imgResize{
      width: 100px;
      height: 100px;
      
-}
+} */
 
-div.fixed {
-     position: fixed;
-     bottom: 0;
-     right: 0;
-     width: 300px;
-     border: 3px solid #73AD21;
-          
-}
 /* Content box for images and scene changes */
 #imageBox{
      padding: 18rem;
@@ -41,6 +33,7 @@ div.fixed {
      border-bottom: 5px solid white;
      border-right: 5px solid white;
      border-left: 5px solid white;
+     background-image: url(img/forest.jpg);
 
 }
 
