--- a/style.css
+++ b/style.css
@@ -11,11 +11,12 @@
 /* Change the font style for the game title */
 #gameTitle{
      display: flex;
-     color: red;
+     color: white;
      font-family: "Jacquard 12";
      justify-content: center;
      padding: 11.5rem;
      font-size: 120px;
+     text-shadow: 12px 12px red, 0 0 25px
 }
 
 /* #imgResize{
@@ -52,7 +53,6 @@
      border-bottom: 5px solid white;
      border-right: 5px solid white;
      border-left: 5px solid white;
-     
 }
 
 #actionsBox{
