Deleting unwanted functions
Creating the functionality behind button replacement has been unsuccessful, thus I did the following:
- removed functions in charge of hiding the "actions" buttons at the end of the game intro
- removed functions in charge of replacing the "actions" buttons with a new set of buttons.

--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ a:focus{
     width: 20rem;
 }
 
-#choiceHolder {
+/* #choiceHolder {
      margin-top: 1em;
      display: flex;
      gap: 1em;
@@ -160,9 +160,5 @@ a:focus{
    
    #choiceHolder button:hover {
      background: #444;
-   }
-
-   .hidden {
-     display: none !important;
-   }
+   } */
 
