--- a/style.css
+++ b/style.css
@@ -178,11 +178,32 @@ a:focus{
      background: #444;
    } */
 
-#darryl-img>img{
+#darryl-img img{
      height: 5px;
 }
 #darryl-img{
      position: absolute;
      left: 44%;
      top: 9.3%;
+}
+
+#darryl-img a {
+     background: none;
+     width: fit-content;
+     height: fit-content;
+     padding: 0;
+}
+
+#darryl{
+     height:  20px;
+     width: 20px;    
+}
+
+#darryl-page{
+     display: flex;
+     background-color: white;
+     margin: 0;
+     justify-content: flex-start;
+     align-items: center;
+     flex-direction: column;
 }
