--- a/style.css
+++ b/style.css
@@ -80,9 +80,9 @@
 
      /* BUTTON STYLING */
      background-color: green;
-     padding: 3rem;
-     padding-left: 7rem;
-     padding-right: 7rem;
+     /* padding: 3rem;
+     padding-left: 13rem;
+     padding-right: 13rem; */
 
      user-select: none;
      -webkit-user-select: none; /* For Safari/old browsers */
@@ -102,28 +102,123 @@
      border: 2px solid white;
 }
 
-/* #act{
-     font-size: 40px;
-}
+/* ------------------------------------------------------------------- */
+/* === INVENTORY DISPLAY === */
+#inventoryDisplay {
+     background-color: black;
+     color: white;
+     padding: 2em;
+     border: 6px dashed white;
+     border-radius: 2px;
+     max-width: 300px;
+     position: absolute;
+     bottom: 80px;
+     left: 20px;
+     z-index: 100;
+   }
+   #closeInventory {    
+     font-family: "Pixelify Sans", sans-serif;
+     
+     margin-top: 1em;
+     background-color: green;
+     color: white;
+     border: none;
+     padding: 0.3em 0.6em;
+     cursor: pointer;
+   }
 
-#eat{
-     font-size: 40px;
+   #inventoryDisplay h3{    
+     font-family: "Pixelify Sans", sans-serif;
+     font-size: x-large;
+   }
 
-}
+   #playerHealth{
+     font-family: "Pixelify Sans", sans-serif;
+     font-size: larger;
+     font-weight: bold;
+     color: chartreuse;
+   }
+   #playerExp{
+     font-family: "Pixelify Sans", sans-serif;
+     color: gold;
+   }
+   #playerStrength{
+     font-family: "Pixelify Sans", sans-serif;
+     color: orange;
+   }
 
-#talk{
-     font-size: 40px;
+   #playerItems{
+     font-family: "Pixelify Sans", sans-serif;
+   }
 
+   .inventory-item {
+     padding: 6px 12px;
+     margin: 4px 0;
+     border: none;
+     border-radius: 6px;
+     background-color: black;
+     color: white;
+     font-family: inherit;
+     cursor: pointer;
+     width: 100%;
+     text-align: left;
+     }
+     .inventory-item:hover {
+          transition-duration: 0.15s;
+          color: black;
+          background-color: yellow;
+     }
+
+     /* ------------------------------------------------------------------- */
+     /* === "ACT" DISPLAY === */
+     .act-option {
+          font-family: "Pixelify Sans", sans-serif;
+          font-size: x-large;
+
+          padding: 1rem;
+          left: 1rem;
+          right: 1rem;
+          /* margin: 4px 0; */
+          border: none;
+          border-radius: 6px;
+          background-color: #444;
+          color: white;
+          cursor: pointer;
+          width: 100%;
+          text-align: left;
+      }
+      .act-option:hover {
+          transition-duration: 0.15s;
+          background-color: #666;
+      }
+
+      #closeActDisplay {
+          font-size: large;
+          font-family: "Pixelify Sans", sans-serif;
+
+          background-color: red;
+          color: white;
+      }
+   
+
+#act{
+     padding: 3rem;
+     padding-left: 11rem;
+     padding-right: 11rem;
 }
 
 #combat{
-     font-size: 30px;
+     padding: 3rem;
+     padding-left: 10rem;
+     padding-right: 10rem;
 
 }
 
 #inventory{
-     font-size: 30px;
-} */
+     padding: 3rem;
+     padding-left: 9rem;
+     padding-right: 9rem;
+}
 
  a:link{
      text-decoration: none;
@@ -207,3 +302,5 @@ a:focus{
      align-items: center;
      flex-direction: column;
 }
+
+
