--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@
      user-select: none;
      -webkit-user-select: none; /* For Safari/old browsers */
      -ms-user-select: none; /* For older IE */
+     position: absolute;
+     right: 1rem;
+     bottom: 1rem;
+     cursor: pointer;
  }
 
  #nextButton:hover{
@@ -39,44 +43,58 @@
 
 /* Content box for images and scene changes */
 #imageBox{
-     padding: 18rem;
-     margin-right: 6rem;
-     margin-left: 6rem;
+     /* padding: 18rem; */
+     margin: 0 auto;
      border-top: 5px solid white;
      border-bottom: 5px solid white;
      border-right: 5px solid white;
      border-left: 5px solid white;
      background-image: url(img/forest.jpg);
+     background-size: cover;
+     background-position: top center;
+     height: 60vh;
+     width: 90vw;
 
 }
 
 #interFace{
      display: flex;
-     
+     /* height: 100vh;      */
 }
 
 /* Content box for text and scene changes in dialogue, as well as scene descriptions */
 #dialogueBox{
-     margin-top: -0.3rem;
-     margin-right: 10rem;
-     margin-left: 10rem;
-     padding: 9rem;
-     border-top: 5px solid white;
-     border-bottom: 5px solid white;
+     /* margin-top: -0.3rem; */
+     /* margin-right: 10rem;
+     margin-left: 10rem; */
+     /* padding: 9rem; */
+     border: 5px solid white;
+     border-top: none;
+     width: 80vw;
+     margin: 0 auto;
+     padding: 2rem;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     position: relative;
+     /* border-bottom: 5px solid white;
      border-right: 5px solid white;
-     border-left: 5px solid white;
+     border-left: 5px solid white; */
 }
 
 #actionsBox{
      margin-top: 2rem;
      display: flex;
-     justify-content: space-around;
+     justify-content: space-between;
+     max-width: 88vw;
+     margin: 2rem auto 0;
 }
 #actionsBox button{
      /* TEXT STYLING */
      color: white;
      font-family: "Pixelify Sans", sans-serif;
      font-size: 40px;
+     cursor: pointer;
 
      /* BUTTON STYLING */
      background-color: green;
@@ -102,6 +120,27 @@
      border: 2px solid white;
 }
 
+#actionsBox button.disabled,
+#actionsBox button.disabled:hover,
+#actionsBox button.disabled:focus {
+     background-color: #444;
+     color: #888;
+     cursor: not-allowed;
+}
+
+#actionsBox button.disabled:focus{
+     animation: flashRed 0.33s ease-in-out;
+}
+
+@keyframes flashRed {
+     0%, 50%, 100% {
+       background-color: rgb(156, 18, 18);
+     }
+     25%, 75% {
+       background-color: rgb(215, 25, 25);
+     }
+   }
+
 /* ------------------------------------------------------------------- */
 /* === INVENTORY DISPLAY === */
 #inventoryDisplay {
@@ -111,20 +150,32 @@
      border: 6px dashed white;
      border-radius: 2px;
      max-width: 300px;
+     min-width: 200px;
      position: absolute;
-     bottom: 80px;
-     left: 20px;
+     bottom: 14rem;
+     right: 6vw;
      z-index: 100;
+     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
    }
    #closeInventory {    
      font-family: "Pixelify Sans", sans-serif;
-     
-     margin-top: 1em;
-     background-color: green;
+     position: absolute;
+     top: 0.5rem;
+     left: 0.5rem;
+     display: inline-flex;
+     justify-content: center;
+     align-items: center;
+     align-self: flex-start;
+     /* margin-top: 1em; */
+     background-color: red;
      color: white;
      border: none;
      padding: 0.3em 0.6em;
+     width: fit-content;
      cursor: pointer;
+     font-size: large;
+     font-family: "Pixelify Sans", sans-serif;
+
    }
 
    #inventoryDisplay h3{    
@@ -171,6 +222,13 @@
 
      /* ------------------------------------------------------------------- */
      /* === "ACT" DISPLAY === */
+     #actDisplay {
+          position: absolute;
+          bottom: 14rem;
+          left: 6vw;
+          z-index: 100;
+          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+     }
      .act-option {
           font-family: "Pixelify Sans", sans-serif;
           font-size: x-large;
@@ -195,9 +253,13 @@
       #closeActDisplay {
           font-size: large;
           font-family: "Pixelify Sans", sans-serif;
-
+          cursor: pointer;
           background-color: red;
           color: white;
+
+          position: absolute;
+          top: -20px;
+          left: 15px;
       }
    
 
@@ -251,6 +313,8 @@ a:focus{
     font-size: 40px;
     width: 20rem;
 }
+
+
 
 /* #choiceHolder {
      margin-top: 1em;
