--- a/style.css
+++ b/style.css
@@ -85,16 +85,19 @@
 #actionsBox{
      margin-top: 2rem;
      display: flex;
+     flex-flow: row wrap;
      justify-content: space-between;
      max-width: 88vw;
      margin: 2rem auto 0;
+     position: relative;
 }
-#actionsBox button{
+#actionsBox > button {
      /* TEXT STYLING */
      color: white;
      font-family: "Pixelify Sans", sans-serif;
-     font-size: 40px;
+     font-size: 2.5rem;
      cursor: pointer;
+     padding: 3rem;
 
      /* BUTTON STYLING */
      background-color: green;
@@ -105,30 +108,34 @@
      user-select: none;
      -webkit-user-select: none; /* For Safari/old browsers */
      -ms-user-select: none; /* For older IE */
+     width: 30%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
 }
 
-#actionsBox button:hover{
+#actionsBox > button:hover{
      transition-duration: 0.2s;
      color: black;
      background-color: yellow;
 }
 
-#actionsBox button:focus{
+#actionsBox > button:focus{
      transition-duration: 0.2s;
      color: black;
      background-color: yellow;
      border: 2px solid white;
 }
 
-#actionsBox button.disabled,
-#actionsBox button.disabled:hover,
-#actionsBox button.disabled:focus {
+#actionsBox > button.disabled,
+#actionsBox > button.disabled:hover,
+#actionsBox > button.disabled:focus {
      background-color: #444;
      color: #888;
      cursor: not-allowed;
 }
 
-#actionsBox button.disabled:focus{
+#actionsBox > button.disabled:focus{
      animation: flashRed 0.33s ease-in-out;
 }
 
@@ -152,8 +159,8 @@
      max-width: 300px;
      min-width: 200px;
      position: absolute;
-     bottom: 14rem;
-     right: 6vw;
+     bottom: 10rem;
+     right: 0;
      z-index: 100;
      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
    }
@@ -224,8 +231,8 @@
      /* === "ACT" DISPLAY === */
      #actDisplay {
           position: absolute;
-          bottom: 14rem;
-          left: 6vw;
+          bottom: 10rem;
+          left: 0;
           z-index: 100;
           box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
      }
@@ -263,24 +270,7 @@
       }
    
 
-#act{
-     padding: 3rem;
-     padding-left: 11rem;
-     padding-right: 11rem;
-}
 
-#combat{
-     padding: 3rem;
-     padding-left: 10rem;
-     padding-right: 10rem;
-
-}
-
-#inventory{
-     padding: 3rem;
-     padding-left: 9rem;
-     padding-right: 9rem;
-}
 
  a:link{
      text-decoration: none;
@@ -367,4 +357,24 @@ a:focus{
      flex-direction: column;
 }
 
-
+@media screen and (max-width: 800px) {
+     #gameTitle{
+          font-size: 60px;
+          padding: 5rem;
+     }
+     #imageBox{
+          height: 40vh;
+          width: 90vw;
+     }
+     #dialogueBox{
+          width: 80vw;
+          padding: 1rem;
+     }
+     #actionsBox > button {
+          width: 100%;
+          margin-bottom: 1rem;
+     }  
+     #closeActDisplay {
+          display: none;
+     }  
+}
