New enemy instance idea
THis is a commit that contains mr. fast's enemy example

--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@
      background-color:  black;
 }
 
+.hidden {
+     display: none;
+}
+
+.visible {
+     display: block;
+}
+
 
 /* This contains the title color and its shadow */
 #gameTitle{
