--- a/style.css
+++ b/style.css
@@ -43,12 +43,6 @@
      background-color: yellow;
  }
 
-/* #imgResize{
-     width: 100px;
-     height: 100px;
-     
-} */
-
 /* Content box for images and scene changes */
 #imageBox{
      /* padding: 18rem; */
@@ -57,7 +51,7 @@
      border-bottom: 5px solid white;
      border-right: 5px solid white;
      border-left: 5px solid white;
-     background-image: url(img/forest.jpg);
+     background-image: url(img/watchtower.jpg.png);
      background-size: cover;
      background-position: top center;
      height: 60vh;
