--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ a:focus{
      flex-direction: column;
 }
 
-@media screen and (min-width: 800px) and (max-width: 1800px) {
+@media screen and (min-width: 800px) {
      #gameTitle{
           font-size: 60px;
           padding: 5rem;
@@ -338,18 +338,4 @@ a:focus{
      #closeActDisplay {
           display: none;
      }  
-}
-
-@media screen and (max-width: 1800px) {
-    #imageBox {
-        height: 50vh;
-        width: 200px;
-        background-size: contain; /* Ensure the image scales properly */
-        background-position: center;
-    }
-
-    #dialogueBox{
-          width: 80vw;
-          margin-top: 3rem;
-     }
 }
