--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@
      margin-left: 10rem; */
      /* padding: 9rem; */
      border: 5px solid white;
-     border-top: none;
+     border-top: none !important;
      width: 80vw;
      margin: 0 auto;
      padding: 2rem;
@@ -327,8 +327,9 @@ a:focus{
     }
 
     #dialogueBox {
-        width: 80vw;
+        width: 70vw;
         margin-top: 3rem;
+        border-top: none !important;
     }
      #act {
           width: 100%;
