--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@
      margin-left: 10rem; */
      /* padding: 9rem; */
      border: 5px solid white;
-     border-top: none !important;
+     border-top: none;
      width: 80vw;
      margin: 0 auto;
      padding: 2rem;
