--- a/style.css
+++ b/style.css
@@ -82,8 +82,8 @@
      border-left: 5px solid white;
      background-size: cover;
      background-position: top center;
-     height: 100vh;
-     width: 90vw;
+     height: 60vh;
+     width: 40vw;
 }
 
 
@@ -328,7 +328,7 @@ a:focus{
           font-size: 10px;
      }
     #imageBox {
-        width: 40vh;
+        width: 35vh;
         height: 50vw;
         background-size: contain; /* Ensure the image scales properly */
     }
@@ -340,7 +340,7 @@ a:focus{
     }
 
     #text {
-     font-size: small;
+     font-size: medium;
      }
 
      #act {
